[package]
name = "blog-os"
version = "0.1.0"
authors = ["Andy Fang <andy.fang@airbnb.com>"]

[dependencies]
bootloader_precompiled = "0.2.0"
volatile = "0.2.3"
spin = "0.4.9"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
default-target = "x86_64-blog-os.json"
